--- a/Projects/javascript/index.html
+++ b/Projects/javascript/index.html
@@ -9,7 +9,7 @@
     <h1>The ul element</h1>
     
     <ul id="s">
-        <li>Coffee</li>
+      <li id="ss">Coffee</li>
       <li>Tea</li>
       <li>Milk</li>
     </ul>
@@ -18,21 +18,29 @@
 Enter Your Color:
 <input type="text" placeholder="Enter Your Color" id="A" />
 <button onclick="colorChange()">Color Change</button>
+
+
 Enter Your list:
-<input type="text" placeholder="Enter Your Color" id="B" />
-<button onclick="addList()">Add</button>
+<input type="text" placeholder="Enter Your list"  id="txt" />
+<button type="submit" id="btn">Submit</button>
 
 <script >
  function colorChange(){
   var col= (document.getElementById('A').value)
   var list= (document.getElementById('s').style.backgroundColor= col)
-    }
+  onclick=document.getElementById('A').value= ' '
+ }
 
-    function addList(){
-  var x= (document.getElementById('B').value)
-  var y= (document.getElementById('s').value= x )
-  console.log(y);
-    }
+ let btn = document.getElementById('btn')
+let txt = document.getElementById('txt')
+let ul = document.getElementById('s');
+
+btn.addEventListener('click', function() {
+  let list = document.createElement('li')
+  list.innerHTML = txt.value;
+  ul.appendChild(list);
+  onclick=document.getElementById('txt').value= ' ';
+})
    
   
 </script>
